(1) Get Data Button and Activity (2) Add JSOUP to gradle deps (3) Read Multitable with JSOUP

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".show_wikitable"></activity>
+        <activity android:name=".show_multitable"></activity>
+        <activity android:name=".ShowMultiTable" />
+        <activity android:name=".show_wikitable" />
         <activity android:name=".testActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
